--- a/Decripter/Decripter.csproj
+++ b/Decripter/Decripter.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<OutputType>Library</OutputType>
+		<EnableComHosting>true</EnableComHosting>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="PgpCore" Version="6.5.3" />
-    <PackageReference Include="SSH.NET" Version="2025.1.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="PgpCore" Version="6.5.3" />
+		<PackageReference Include="SSH.NET" Version="2025.1.0" />
+	</ItemGroup>
 
 </Project>
